<resources>
    <string name="app_name">Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_add">Add</string>
    <string name="title_currency">Currency</string>
    <string name="title_user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Greeting">Good Morning,</string>
</resources>