<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_action_statistics"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_currency"
        android:icon="@drawable/ic_action_currency"
        android:title="@string/title_currency" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_action_user"
        android:title="@string/title_user" />

</menu>